<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".RegisterActivity">


    <EditText
        android:id="@+id/emailLoginEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="93dp"
        android:ems="10"
        android:hint="@string/emailEditView"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/passwordLoginEditText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordLoginEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/passwordEditView"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/notRegisteredYetTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="74dp"
        android:onClick="loginOnClick"
        android:text="@string/enterButton"
        app:layout_constraintEnd_toEndOf="@+id/notRegisteredYetTextView"
        app:layout_constraintTop_toBottomOf="@+id/notRegisteredYetTextView" />

    <TextView
        android:id="@+id/notRegisteredYetTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="272dp"
        android:clickable="true"
        android:onClick="registerToLoginOnClick"
        android:text="@string/notRegisteredYetTextView"
        app:layout_constraintEnd_toEndOf="@+id/passwordLoginEditText"
        app:layout_constraintStart_toEndOf="@+id/passwordLoginEditText"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>