<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/text_view_true_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="16dp"
        android:freezesText="true"
        android:text="@string/trueCountTextView"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_false_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:freezesText="true"
        android:text="@string/falseCountTextView"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/text_view_true_count"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_net_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="9dp"
        android:freezesText="true"
        android:text="@string/netCountTextView"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/text_view_true_count"
        app:layout_constraintTop_toBottomOf="@+id/text_view_true_count" />

    <TextView
        android:id="@+id/text_view_question_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_true_count"
        android:freezesText="true"
        android:text="@string/questionCountTextView"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/text_view_score"
        app:layout_constraintStart_toEndOf="@+id/text_view_score"
        app:layout_constraintTop_toTopOf="@+id/radio_group" />

    <TextView
        android:id="@+id/text_view_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_question_count"
        android:layout_marginTop="18dp"
        android:freezesText="true"
        android:text="@string/categoryTextView"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_lesson_name" />

    <TextView
        android:id="@+id/text_view_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_category"
        android:layout_marginStart="1dp"
        android:layout_marginTop="24dp"
        android:freezesText="true"
        android:text="@string/difficultTextView"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_category" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="56dp"
        android:freezesText="true"
        android:text="@string/countDownTextView"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@+id/text_view_false_count"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RadioGroup>

    <Button
        android:id="@+id/button_confirm_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group"
        android:layout_marginBottom="66dp"
        android:freezesText="true"
        android:text="@string/confirmNextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioButton
        android:id="@+id/radio_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:text="A"
        app:layout_constraintBaseline_toBaselineOf="@+id/radio_button2"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioButton
        android:id="@+id/radio_button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:gravity="center"
        android:text="C"
        app:layout_constraintBaseline_toBaselineOf="@+id/radio_button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioButton
        android:id="@+id/radio_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="85dp"
        android:freezesText="true"
        android:text="B"
        app:layout_constraintEnd_toEndOf="@+id/text_view_net_count"
        app:layout_constraintStart_toStartOf="@+id/radio_button1"
        app:layout_constraintTop_toTopOf="@+id/radio_button3" />

    <RadioButton
        android:id="@+id/radio_button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="234dp"
        android:text="D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radio_button5" />

    <RadioButton
        android:id="@+id/radio_button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="E"
        app:layout_constraintBaseline_toBaselineOf="@+id/radio_button4"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_view_lesson_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="56dp"
        android:text="@string/lessonNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="66dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/text_view_true_count"
        app:layout_constraintTop_toBottomOf="@+id/text_view_net_count" />

    <TextView
        android:id="@+id/text_view_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="8dp"
        android:text="@string/scoreTextView"
        app:layout_constraintBottom_toTopOf="@+id/text_view_lesson_name"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>